--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   share_plus: ^7.2.2
   printing: ^5.12.0
   provider: ^6.1.2
-
+flutter_colorpicker: ^1.0.3
 
 dev_dependencies:
   flutter_test:
